adds three other skills to home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,12 +46,15 @@
         <div class='container fade'>
             <div class=''>
                 <div id='skills' class='row justify-content-center'>
-                    <p class='col-sm-2'>Javascript</p>
-                    <p class='col-sm-2'>React</p>
-                    <p class='col-sm-2'>CSS</p>
-                    <p class='col-sm-2'>HTML</p>
-                    <p class='col-sm-2'>Node.js</p>
-                    <p class='col-sm-2'>Express</p>
+                    <p class='skill col-sm-1'>Javascript</p>
+                    <p class='col-sm-1'>React</p>
+                    <p class='col-sm-1'>Redux</p>
+                    <p class='col-sm-1'>CSS</p>
+                    <p class='col-sm-1'>HTML</p>
+                    <p class='col-sm-1'>Node.js</p>
+                    <p class='col-sm-1'>Express</p>
+                    <p class='col-sm-1'>MongoDB</p>
+                    <p class='col-sm-1'>MySQL</p>
                 </div>
             </div>
         </div>
