--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css' />
         <link rel='stylesheet' href='/public/style.css' />
         <title> Andy's Portfolio</title>
