--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,8 @@
       <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css' />
       <link rel='stylesheet' href='/public/style.css'/>
       <title> Andy's Portfolio </title>
-        <meta charset="utf-8">
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body class='body' style="background-color:#222930;">
       <div> 
