--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -33,25 +33,25 @@
             <div>
                 <h1 id='projects'>Check out some of my past projects!</h1>
             </div>
-            <div class='row'>
+            <div class='row project'>
                 <div class='col-md-6'>
-                    <img src='/public/screenshots/vstda.png' style='width: 500px; height: 250px'>
+                    <img src='/public/screenshots/vstda.png' style='width: 100%; height: 250px'>
                 </div>
                 <div class='col-md-6'>
                     <h6 class='projDesc'>The Very Simple To-Do App allows you to add items to a to-do list. You can assign the appropriate priority to each task. You can also edit or delete any task that has already been added. The tasks will take on a color based on the priority assigned. This project was created using Javascript React.</h6>
                 </div>
             </div>
-            <div class='row'>
+            <div class='row project'>
                 <div class='col-md-6'>
-                    <h6 class='projDesc'>The Compatibility Test allows you to enter two images of individual people and test their compatibility. The app uses the Clarifai API to decipher key words from the images and tests the compatibility using the “Love Calculator” API. This project was created using Javascript React.</h6>
+                    <img src='/public/screenshots/compatabilityTest.png' style='width: 100%; height: 300px'>
                 </div>
                 <div class='col-md-6'>
-                    <img src='/public/screenshots/compatabilityTest.png' style='width: 500px; height: 300px'>
+                    <h6 class='projDesc'>The Compatibility Test allows you to enter two images of individual people and test their compatibility. The app uses the Clarifai API to decipher key words from the images and tests the compatibility using the “Love Calculator” API. This project was created using Javascript React.</h6>
                 </div>
             </div>
             <div class='row' style='padding-bottom: 50px'>
                 <div class='col-md-6'>
-                    <img src='/public/screenshots/changeCalc2.png' style='width: 500px; height: 250px;'>
+                    <img src='/public/screenshots/changeCalc2.png' style='width: 100%; height: 250px;'>
                 </div>
                 <div class='col-md-6'>
                     <h6 class='projDesc'>The change Calculator App will calculate how much change is owed based on how much was due and how much was received. It will break down the change into types of bills as well as types of coins. If not enough money was received, a red a lert banner will appear to notify the user. There is a currency select menu if the user is operating in Euros. This project was created using javascript React.</h6>
